scripts/manifests/ossm-backend-native-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: ossm-backend
  name: ossm-backend-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ossm-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ossm-backend
        deploymentconfig: ossm-backend
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
      - image: quay.io/fuangwit/ossm-backend-native:v1
        imagePullPolicy: Always
        name: ossm-backend-v1
        ports:
        - containerPort: 8080
          protocol: TCP
