scripts/manifests/ossm-frontend-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: ossm-frontend
    app.kubernetes.io/name: quarkus
  name: ossm-frontend-v1
  namespace: demo-ossm-frontend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ossm-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ossm-frontend
        deploymentconfig: ossm-frontend
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
      - image: quay.io/fuangwit/ossm-frontend-native:v1
        imagePullPolicy: Always
        name: ossm-frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /work/config
          name: app-config
      volumes:
      - configMap:
          defaultMode: 420
          name: app-config
        name: app-config
