scripts/manifests/ossm-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ossm-backend
  labels:
    app: ossm-backend
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: ossm-backend
