scripts/manifests/ossm-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ossm-frontend
  name: ossm-frontend
  namespace: demo-ossm-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ossm-frontend
    deploymentconfig: ossm-frontend
