scripts/manifests/ossm-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ossm-frontend
  name: ossm-frontend
  namespace: demo-ossm-frontend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ossm-frontend
    weight: 100
  wildcardPolicy: None
